// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validate ESLint configs .add(Validate ESLint configs for bad.js) should return the proper config 1`] = `
Object {
  "env": Object {
    "browser": true,
    "es2021": true,
    "es6": true,
    "node": true,
    "vue/setup-compiler-macros": true,
  },
  "globals": Object {},
  "ignorePatterns": Array [],
  "noInlineConfig": undefined,
  "parser": "C:\\\\Data\\\\Development\\\\Projects\\\\Packages\\\\configs\\\\node_modules\\\\.pnpm\\\\vue-eslint-parser@9.0.3_eslint@8.21.0\\\\node_modules\\\\vue-eslint-parser\\\\index.js",
  "parserOptions": Object {
    "ecmaVersion": 2020,
    "parser": "@typescript-eslint/parser",
    "sourceType": "module",
  },
  "plugins": Array [
    "@typescript-eslint",
    "vue",
    "json-files",
    "beautiful-sort",
    "sort-class-members",
  ],
  "reportUnusedDisableDirectives": undefined,
  "rules": Object {
    "@typescript-eslint/adjacent-overload-signatures": Array [
      "error",
    ],
    "@typescript-eslint/ban-ts-comment": Array [
      "off",
    ],
    "@typescript-eslint/ban-types": Array [
      "error",
    ],
    "@typescript-eslint/brace-style": Array [
      "error",
      "1tbs",
    ],
    "@typescript-eslint/comma-dangle": Array [
      "error",
      "never",
    ],
    "@typescript-eslint/comma-spacing": Array [
      "error",
      Object {
        "after": true,
        "before": false,
      },
    ],
    "@typescript-eslint/func-call-spacing": Array [
      "error",
    ],
    "@typescript-eslint/keyword-spacing": Array [
      "error",
    ],
    "@typescript-eslint/lines-between-class-members": Array [
      "error",
      "always",
      Object {
        "exceptAfterSingleLine": true,
      },
    ],
    "@typescript-eslint/member-delimiter-style": Array [
      "error",
      Object {
        "multiline": Object {
          "delimiter": "none",
          "requireLast": true,
        },
        "multilineDetection": "brackets",
        "singleline": Object {
          "delimiter": "semi",
          "requireLast": false,
        },
      },
    ],
    "@typescript-eslint/method-signature-style": Array [
      "warn",
      "method",
    ],
    "@typescript-eslint/no-array-constructor": Array [
      "error",
    ],
    "@typescript-eslint/no-empty-function": Array [
      "error",
    ],
    "@typescript-eslint/no-empty-interface": Array [
      "error",
    ],
    "@typescript-eslint/no-explicit-any": Array [
      "off",
    ],
    "@typescript-eslint/no-extra-non-null-assertion": Array [
      "error",
    ],
    "@typescript-eslint/no-extra-parens": Array [
      "error",
    ],
    "@typescript-eslint/no-extra-semi": Array [
      "error",
    ],
    "@typescript-eslint/no-inferrable-types": Array [
      "error",
    ],
    "@typescript-eslint/no-loss-of-precision": Array [
      "error",
    ],
    "@typescript-eslint/no-misused-new": Array [
      "error",
    ],
    "@typescript-eslint/no-namespace": Array [
      "error",
    ],
    "@typescript-eslint/no-non-null-asserted-optional-chain": Array [
      "error",
    ],
    "@typescript-eslint/no-non-null-assertion": Array [
      "warn",
    ],
    "@typescript-eslint/no-this-alias": Array [
      "error",
    ],
    "@typescript-eslint/no-unnecessary-type-constraint": Array [
      "error",
    ],
    "@typescript-eslint/no-unused-vars": Array [
      "warn",
    ],
    "@typescript-eslint/no-var-requires": Array [
      "error",
    ],
    "@typescript-eslint/object-curly-spacing": Array [
      "error",
      "never",
    ],
    "@typescript-eslint/prefer-as-const": Array [
      "error",
    ],
    "@typescript-eslint/prefer-namespace-keyword": Array [
      "error",
    ],
    "@typescript-eslint/prefer-ts-expect-error": Array [
      "warn",
    ],
    "@typescript-eslint/quotes": Array [
      "error",
      "single",
      Object {
        "allowTemplateLiterals": true,
        "avoidEscape": true,
      },
    ],
    "@typescript-eslint/semi": Array [
      "error",
      "never",
    ],
    "@typescript-eslint/sort-type-union-intersection-members": Array [
      "error",
    ],
    "@typescript-eslint/space-before-blocks": Array [
      "error",
    ],
    "@typescript-eslint/space-before-function-paren": Array [
      "error",
      Object {
        "anonymous": "never",
        "asyncArrow": "always",
        "named": "never",
      },
    ],
    "@typescript-eslint/space-infix-ops": Array [
      "error",
    ],
    "@typescript-eslint/triple-slash-reference": Array [
      "error",
    ],
    "@typescript-eslint/type-annotation-spacing": Array [
      "error",
    ],
    "array-bracket-newline": Array [
      "error",
      Object {
        "minItems": 4,
      },
    ],
    "array-bracket-spacing": Array [
      "error",
      "never",
      Object {
        "arraysInArrays": true,
      },
    ],
    "array-element-newline": Array [
      "error",
      Object {
        "ArrayExpression": "consistent",
        "ArrayPattern": Object {
          "minItems": 4,
        },
      },
    ],
    "arrow-parens": Array [
      "error",
      "as-needed",
    ],
    "arrow-spacing": Array [
      "error",
    ],
    "beautiful-sort/import": Array [
      "error",
      Object {
        "order": Array [
          "obj",
          "defaultObj",
          "namespace",
          "default",
          "special",
          "none",
        ],
      },
    ],
    "comma-style": Array [
      "error",
      "last",
    ],
    "computed-property-spacing": Array [
      "error",
    ],
    "constructor-super": Array [
      "error",
    ],
    "curly": Array [
      "error",
      "all",
    ],
    "dot-location": Array [
      "error",
      "property",
    ],
    "eol-last": Array [
      "error",
    ],
    "eqeqeq": Array [
      "error",
    ],
    "for-direction": Array [
      "error",
    ],
    "function-call-argument-newline": Array [
      "error",
      "consistent",
    ],
    "function-paren-newline": Array [
      "error",
      Object {
        "minItems": 6,
      },
    ],
    "generator-star-spacing": Array [
      "error",
    ],
    "getter-return": Array [
      "error",
    ],
    "implicit-arrow-linebreak": Array [
      "error",
    ],
    "indent": Array [
      "error",
      "tab",
      Object {
        "MemberExpression": 1,
        "SwitchCase": 1,
        "flatTernaryExpressions": false,
        "ignoreComments": false,
        "offsetTernaryExpressions": false,
      },
    ],
    "json-files/require-unique-dependency-names": Array [
      "error",
    ],
    "json-files/sort-package-json": Array [
      "error",
    ],
    "key-spacing": Array [
      "error",
    ],
    "linebreak-style": Array [
      "error",
    ],
    "lines-around-comment": Array [
      "error",
      Object {
        "afterBlockComment": false,
        "afterLineComment": false,
        "allowBlockEnd": false,
        "allowBlockStart": true,
        "beforeBlockComment": true,
        "beforeLineComment": false,
      },
    ],
    "no-array-constructor": Array [
      "off",
    ],
    "no-async-promise-executor": Array [
      "error",
    ],
    "no-case-declarations": Array [
      "error",
    ],
    "no-class-assign": Array [
      "error",
    ],
    "no-compare-neg-zero": Array [
      "error",
    ],
    "no-cond-assign": Array [
      "error",
    ],
    "no-const-assign": Array [
      "error",
    ],
    "no-constant-condition": Array [
      "error",
    ],
    "no-control-regex": Array [
      "error",
    ],
    "no-debugger": Array [
      "error",
    ],
    "no-delete-var": Array [
      "error",
    ],
    "no-dupe-args": Array [
      "error",
    ],
    "no-dupe-class-members": Array [
      "error",
    ],
    "no-dupe-else-if": Array [
      "error",
    ],
    "no-dupe-keys": Array [
      "error",
    ],
    "no-duplicate-case": Array [
      "error",
    ],
    "no-else-return": Array [
      "error",
    ],
    "no-empty": Array [
      "error",
    ],
    "no-empty-character-class": Array [
      "error",
    ],
    "no-empty-function": Array [
      "off",
    ],
    "no-empty-pattern": Array [
      "error",
    ],
    "no-ex-assign": Array [
      "error",
    ],
    "no-extra-boolean-cast": Array [
      "error",
    ],
    "no-extra-semi": Array [
      "off",
    ],
    "no-fallthrough": Array [
      "error",
    ],
    "no-func-assign": Array [
      "error",
    ],
    "no-global-assign": Array [
      "error",
    ],
    "no-import-assign": Array [
      "error",
    ],
    "no-inner-declarations": Array [
      "error",
    ],
    "no-invalid-regexp": Array [
      "error",
    ],
    "no-irregular-whitespace": Array [
      "error",
    ],
    "no-lonely-if": Array [
      "error",
    ],
    "no-loss-of-precision": Array [
      "off",
    ],
    "no-misleading-character-class": Array [
      "error",
    ],
    "no-mixed-spaces-and-tabs": Array [
      "error",
    ],
    "no-multi-spaces": Array [
      "error",
    ],
    "no-multiple-empty-lines": Array [
      "error",
      Object {
        "max": 1,
      },
    ],
    "no-new-symbol": Array [
      "error",
    ],
    "no-nonoctal-decimal-escape": Array [
      "error",
    ],
    "no-obj-calls": Array [
      "error",
    ],
    "no-octal": Array [
      "error",
    ],
    "no-prototype-builtins": Array [
      "error",
    ],
    "no-redeclare": Array [
      "error",
    ],
    "no-regex-spaces": Array [
      "error",
    ],
    "no-self-assign": Array [
      "error",
    ],
    "no-setter-return": Array [
      "error",
    ],
    "no-shadow-restricted-names": Array [
      "error",
    ],
    "no-sparse-arrays": Array [
      "error",
    ],
    "no-this-before-super": Array [
      "error",
    ],
    "no-trailing-spaces": Array [
      "error",
    ],
    "no-undef": Array [
      "error",
    ],
    "no-undef-init": Array [
      "error",
    ],
    "no-unexpected-multiline": Array [
      "error",
    ],
    "no-unneeded-ternary": Array [
      "error",
    ],
    "no-unreachable": Array [
      "error",
    ],
    "no-unsafe-finally": Array [
      "error",
    ],
    "no-unsafe-negation": Array [
      "error",
    ],
    "no-unsafe-optional-chaining": Array [
      "error",
    ],
    "no-unused-labels": Array [
      "error",
    ],
    "no-unused-vars": Array [
      "off",
    ],
    "no-useless-backreference": Array [
      "error",
    ],
    "no-useless-catch": Array [
      "error",
    ],
    "no-useless-computed-key": Array [
      "error",
    ],
    "no-useless-escape": Array [
      "error",
    ],
    "no-useless-rename": Array [
      "error",
    ],
    "no-useless-return": Array [
      "error",
    ],
    "no-var": Array [
      "error",
    ],
    "no-whitespace-before-property": Array [
      "error",
    ],
    "no-with": Array [
      "error",
    ],
    "nonblock-statement-body-position": Array [
      "error",
      "below",
    ],
    "object-curly-newline": Array [
      "error",
      Object {
        "multiline": true,
      },
    ],
    "object-shorthand": Array [
      "error",
      "always",
      Object {
        "avoidExplicitReturnArrows": true,
      },
    ],
    "operator-linebreak": Array [
      "error",
    ],
    "padded-blocks": Array [
      "warn",
      "never",
    ],
    "prefer-arrow-callback": Array [
      "error",
    ],
    "prefer-const": Array [
      "warn",
    ],
    "prefer-object-spread": Array [
      "error",
    ],
    "prefer-template": Array [
      "error",
    ],
    "quote-props": Array [
      "error",
      "as-needed",
    ],
    "require-yield": Array [
      "error",
    ],
    "rest-spread-spacing": Array [
      "error",
    ],
    "semi-spacing": Array [
      "error",
    ],
    "semi-style": Array [
      "error",
    ],
    "sort-class-members/sort-class-members": Array [
      2,
      Object {
        "accessorPairPositioning": "getThenSet",
        "order": Array [
          "[static-properties]",
          "[properties]",
          "[conventional-private-properties]",
          "constructor",
          "[getters]",
          "[setters]",
          "[accessor-pairs]",
          "[static-methods]",
          "[methods]",
          "[async-methods]",
          "[conventional-private-methods]",
          "[everything-else]",
        ],
        "stopAfterFirstProblem": false,
      },
    ],
    "space-in-parens": Array [
      "error",
    ],
    "space-unary-ops": Array [
      "error",
    ],
    "spaced-comment": Array [
      "error",
      "always",
    ],
    "switch-colon-spacing": Array [
      "error",
    ],
    "template-curly-spacing": Array [
      "error",
    ],
    "template-tag-spacing": Array [
      "error",
    ],
    "use-isnan": Array [
      "error",
    ],
    "valid-typeof": Array [
      "error",
    ],
    "vue/attribute-hyphenation": Array [
      "warn",
    ],
    "vue/attributes-order": Array [
      "warn",
    ],
    "vue/comment-directive": Array [
      "error",
    ],
    "vue/component-definition-name-casing": Array [
      "warn",
    ],
    "vue/component-tags-order": Array [
      "warn",
    ],
    "vue/first-attribute-linebreak": Array [
      "warn",
    ],
    "vue/html-closing-bracket-newline": Array [
      "warn",
    ],
    "vue/html-closing-bracket-spacing": Array [
      "off",
    ],
    "vue/html-end-tags": Array [
      "warn",
    ],
    "vue/html-indent": Array [
      "error",
      "tab",
    ],
    "vue/html-quotes": Array [
      "warn",
    ],
    "vue/html-self-closing": Array [
      "warn",
    ],
    "vue/jsx-uses-vars": Array [
      "error",
    ],
    "vue/max-attributes-per-line": Array [
      "error",
      Object {
        "multiline": Object {
          "max": 1,
        },
        "singleline": Object {
          "max": 4,
        },
      },
    ],
    "vue/multi-word-component-names": Array [
      "error",
    ],
    "vue/multiline-html-element-content-newline": Array [
      "warn",
    ],
    "vue/mustache-interpolation-spacing": Array [
      "warn",
    ],
    "vue/no-arrow-functions-in-watch": Array [
      "error",
    ],
    "vue/no-async-in-computed-properties": Array [
      "error",
    ],
    "vue/no-child-content": Array [
      "error",
    ],
    "vue/no-computed-properties-in-data": Array [
      "error",
    ],
    "vue/no-deprecated-data-object-declaration": Array [
      "error",
    ],
    "vue/no-deprecated-destroyed-lifecycle": Array [
      "error",
    ],
    "vue/no-deprecated-dollar-listeners-api": Array [
      "error",
    ],
    "vue/no-deprecated-dollar-scopedslots-api": Array [
      "error",
    ],
    "vue/no-deprecated-events-api": Array [
      "error",
    ],
    "vue/no-deprecated-filter": Array [
      "error",
    ],
    "vue/no-deprecated-functional-template": Array [
      "error",
    ],
    "vue/no-deprecated-html-element-is": Array [
      "error",
    ],
    "vue/no-deprecated-inline-template": Array [
      "error",
    ],
    "vue/no-deprecated-props-default-this": Array [
      "error",
    ],
    "vue/no-deprecated-router-link-tag-prop": Array [
      "error",
    ],
    "vue/no-deprecated-scope-attribute": Array [
      "error",
    ],
    "vue/no-deprecated-slot-attribute": Array [
      "error",
    ],
    "vue/no-deprecated-slot-scope-attribute": Array [
      "error",
    ],
    "vue/no-deprecated-v-bind-sync": Array [
      "error",
    ],
    "vue/no-deprecated-v-is": Array [
      "error",
    ],
    "vue/no-deprecated-v-on-native-modifier": Array [
      "error",
    ],
    "vue/no-deprecated-v-on-number-modifiers": Array [
      "error",
    ],
    "vue/no-deprecated-vue-config-keycodes": Array [
      "error",
    ],
    "vue/no-dupe-keys": Array [
      "error",
    ],
    "vue/no-dupe-v-else-if": Array [
      "error",
    ],
    "vue/no-duplicate-attributes": Array [
      "error",
    ],
    "vue/no-export-in-script-setup": Array [
      "error",
    ],
    "vue/no-expose-after-await": Array [
      "error",
    ],
    "vue/no-lifecycle-after-await": Array [
      "error",
    ],
    "vue/no-lone-template": Array [
      "warn",
    ],
    "vue/no-multi-spaces": Array [
      "warn",
    ],
    "vue/no-multiple-slot-args": Array [
      "warn",
    ],
    "vue/no-mutating-props": Array [
      "error",
    ],
    "vue/no-parsing-error": Array [
      "error",
    ],
    "vue/no-ref-as-operand": Array [
      "error",
    ],
    "vue/no-reserved-component-names": Array [
      "error",
    ],
    "vue/no-reserved-keys": Array [
      "error",
    ],
    "vue/no-reserved-props": Array [
      "error",
    ],
    "vue/no-setup-props-destructure": Array [
      "off",
    ],
    "vue/no-shared-component-data": Array [
      "error",
    ],
    "vue/no-side-effects-in-computed-properties": Array [
      "error",
    ],
    "vue/no-spaces-around-equal-signs-in-attribute": Array [
      "warn",
    ],
    "vue/no-static-inline-styles": Array [
      "error",
      Object {
        "allowBinding": true,
      },
    ],
    "vue/no-template-key": Array [
      "error",
    ],
    "vue/no-template-shadow": Array [
      "warn",
    ],
    "vue/no-textarea-mustache": Array [
      "error",
    ],
    "vue/no-unused-components": Array [
      "error",
    ],
    "vue/no-unused-vars": Array [
      "error",
    ],
    "vue/no-use-computed-property-like-method": Array [
      "error",
    ],
    "vue/no-use-v-if-with-v-for": Array [
      "error",
    ],
    "vue/no-useless-template-attributes": Array [
      "error",
    ],
    "vue/no-v-for-template-key-on-child": Array [
      "error",
    ],
    "vue/no-v-html": Array [
      "warn",
    ],
    "vue/no-v-text-v-html-on-component": Array [
      "error",
    ],
    "vue/no-watch-after-await": Array [
      "error",
    ],
    "vue/one-component-per-file": Array [
      "warn",
    ],
    "vue/order-in-components": Array [
      "warn",
    ],
    "vue/prefer-import-from-vue": Array [
      "error",
    ],
    "vue/prop-name-casing": Array [
      "warn",
    ],
    "vue/require-component-is": Array [
      "error",
    ],
    "vue/require-default-prop": Array [
      "off",
    ],
    "vue/require-explicit-emits": Array [
      "warn",
    ],
    "vue/require-prop-type-constructor": Array [
      "error",
    ],
    "vue/require-prop-types": Array [
      "warn",
    ],
    "vue/require-render-return": Array [
      "error",
    ],
    "vue/require-slots-as-functions": Array [
      "error",
    ],
    "vue/require-toggle-inside-transition": Array [
      "error",
    ],
    "vue/require-v-for-key": Array [
      "error",
    ],
    "vue/require-valid-default-prop": Array [
      "error",
    ],
    "vue/return-in-computed-property": Array [
      "error",
    ],
    "vue/return-in-emits-validator": Array [
      "error",
    ],
    "vue/singleline-html-element-content-newline": Array [
      "warn",
    ],
    "vue/this-in-template": Array [
      "warn",
    ],
    "vue/use-v-on-exact": Array [
      "error",
    ],
    "vue/v-bind-style": Array [
      "warn",
    ],
    "vue/v-on-event-hyphenation": Array [
      "warn",
    ],
    "vue/v-on-style": Array [
      "warn",
    ],
    "vue/v-slot-style": Array [
      "warn",
    ],
    "vue/valid-attribute-name": Array [
      "error",
    ],
    "vue/valid-define-emits": Array [
      "error",
    ],
    "vue/valid-define-props": Array [
      "error",
    ],
    "vue/valid-next-tick": Array [
      "error",
    ],
    "vue/valid-template-root": Array [
      "error",
    ],
    "vue/valid-v-bind": Array [
      "error",
    ],
    "vue/valid-v-cloak": Array [
      "error",
    ],
    "vue/valid-v-else": Array [
      "error",
    ],
    "vue/valid-v-else-if": Array [
      "error",
    ],
    "vue/valid-v-for": Array [
      "error",
    ],
    "vue/valid-v-html": Array [
      "error",
    ],
    "vue/valid-v-if": Array [
      "error",
    ],
    "vue/valid-v-is": Array [
      "error",
    ],
    "vue/valid-v-memo": Array [
      "error",
    ],
    "vue/valid-v-model": Array [
      "error",
    ],
    "vue/valid-v-on": Array [
      "error",
    ],
    "vue/valid-v-once": Array [
      "error",
    ],
    "vue/valid-v-pre": Array [
      "error",
    ],
    "vue/valid-v-show": Array [
      "error",
    ],
    "vue/valid-v-slot": Array [
      "error",
    ],
    "vue/valid-v-text": Array [
      "error",
    ],
    "yield-star-spacing": Array [
      "error",
    ],
  },
  "settings": Object {},
}
`;

exports[`Validate ESLint configs .add(Validate ESLint configs for bad.js) should return the proper lint results 1`] = `
Array [
  Object {
    "errorCount": 6,
    "fatalErrorCount": 0,
    "filePath": "C:\\\\Data\\\\Development\\\\Projects\\\\Packages\\\\configs\\\\packages\\\\eslint-config\\\\__fixtures__\\\\bad.js",
    "fixableErrorCount": 6,
    "fixableWarningCount": 0,
    "messages": Array [
      Object {
        "column": 10,
        "endColumn": 16,
        "endLine": 4,
        "line": 4,
        "message": "'sample' is defined but never used.",
        "messageId": "unusedVar",
        "nodeType": "Identifier",
        "ruleId": "@typescript-eslint/no-unused-vars",
        "severity": 1,
      },
      Object {
        "column": 27,
        "endColumn": 28,
        "endLine": 4,
        "fix": Object {
          "range": Array [
            96,
            96,
          ],
          "text": "
",
        },
        "line": 4,
        "message": "Statement inside of curly braces should be on next line.",
        "messageId": "blockSameLine",
        "nodeType": "Punctuator",
        "ruleId": "@typescript-eslint/brace-style",
        "severity": 2,
      },
      Object {
        "column": 50,
        "endColumn": 51,
        "endLine": 4,
        "fix": Object {
          "range": Array [
            119,
            119,
          ],
          "text": "
",
        },
        "line": 4,
        "message": "Statement inside of curly braces should be on next line.",
        "messageId": "blockSameLine",
        "nodeType": "Punctuator",
        "ruleId": "@typescript-eslint/brace-style",
        "severity": 2,
      },
      Object {
        "column": 80,
        "endColumn": 81,
        "endLine": 4,
        "fix": Object {
          "range": Array [
            148,
            148,
          ],
          "text": "
",
        },
        "line": 4,
        "message": "Closing curly brace should be on the same line as opening curly brace or on the line after the previous block.",
        "messageId": "singleLineClose",
        "nodeType": "Punctuator",
        "ruleId": "@typescript-eslint/brace-style",
        "severity": 2,
      },
      Object {
        "column": 134,
        "endColumn": 139,
        "endLine": 4,
        "line": 4,
        "message": "'array' is never reassigned. Use 'const' instead.",
        "messageId": "useConst",
        "nodeType": "Identifier",
        "ruleId": "prefer-const",
        "severity": 1,
      },
      Object {
        "column": 181,
        "endColumn": 182,
        "endLine": 4,
        "fix": Object {
          "range": Array [
            250,
            250,
          ],
          "text": "
",
        },
        "line": 4,
        "message": "Statement inside of curly braces should be on next line.",
        "messageId": "blockSameLine",
        "nodeType": "Punctuator",
        "ruleId": "@typescript-eslint/brace-style",
        "severity": 2,
      },
      Object {
        "column": 209,
        "endColumn": 210,
        "endLine": 4,
        "fix": Object {
          "range": Array [
            277,
            277,
          ],
          "text": "
",
        },
        "line": 4,
        "message": "Closing curly brace should be on the same line as opening curly brace or on the line after the previous block.",
        "messageId": "singleLineClose",
        "nodeType": "Punctuator",
        "ruleId": "@typescript-eslint/brace-style",
        "severity": 2,
      },
      Object {
        "column": 223,
        "endColumn": 224,
        "endLine": 4,
        "fix": Object {
          "range": Array [
            291,
            291,
          ],
          "text": "
",
        },
        "line": 4,
        "message": "Closing curly brace should be on the same line as opening curly brace or on the line after the previous block.",
        "messageId": "singleLineClose",
        "nodeType": "Punctuator",
        "ruleId": "@typescript-eslint/brace-style",
        "severity": 2,
      },
    ],
    "source": "// noinspection JSUnusedGlobalSymbols,JSAnnotator
// @formatter:off

function sample(arr, req) {	arr = arr.sort(() => {		return 0.5 - Math.random()	});																				let i = 0,																					array = [];																				while (i < req) {		array.push(arr[i]);		++i	}	return array}
",
    "suppressedMessages": Array [],
    "usedDeprecatedRules": Array [],
    "warningCount": 2,
  },
]
`;

exports[`Validate ESLint configs .add(Validate ESLint configs for bad.json) should return the proper config 1`] = `
Object {
  "env": Object {
    "browser": true,
    "es2021": true,
    "es6": true,
    "node": true,
    "vue/setup-compiler-macros": true,
  },
  "globals": Object {},
  "ignorePatterns": Array [],
  "noInlineConfig": undefined,
  "parser": "C:\\\\Data\\\\Development\\\\Projects\\\\Packages\\\\configs\\\\node_modules\\\\.pnpm\\\\espree@9.3.3\\\\node_modules\\\\espree\\\\dist\\\\espree.cjs",
  "parserOptions": Object {
    "ecmaVersion": 2020,
    "parser": "@typescript-eslint/parser",
    "sourceType": "module",
  },
  "plugins": Array [
    "@typescript-eslint",
    "vue",
    "json-files",
    "beautiful-sort",
    "sort-class-members",
  ],
  "reportUnusedDisableDirectives": undefined,
  "rules": Object {
    "@typescript-eslint/adjacent-overload-signatures": Array [
      "error",
    ],
    "@typescript-eslint/ban-ts-comment": Array [
      "off",
    ],
    "@typescript-eslint/ban-types": Array [
      "error",
    ],
    "@typescript-eslint/brace-style": Array [
      "error",
      "1tbs",
    ],
    "@typescript-eslint/comma-dangle": Array [
      "error",
      "never",
    ],
    "@typescript-eslint/comma-spacing": Array [
      "error",
      Object {
        "after": true,
        "before": false,
      },
    ],
    "@typescript-eslint/func-call-spacing": Array [
      "error",
    ],
    "@typescript-eslint/keyword-spacing": Array [
      "error",
    ],
    "@typescript-eslint/lines-between-class-members": Array [
      "error",
      "always",
      Object {
        "exceptAfterSingleLine": true,
      },
    ],
    "@typescript-eslint/member-delimiter-style": Array [
      "error",
      Object {
        "multiline": Object {
          "delimiter": "none",
          "requireLast": true,
        },
        "multilineDetection": "brackets",
        "singleline": Object {
          "delimiter": "semi",
          "requireLast": false,
        },
      },
    ],
    "@typescript-eslint/method-signature-style": Array [
      "warn",
      "method",
    ],
    "@typescript-eslint/no-array-constructor": Array [
      "error",
    ],
    "@typescript-eslint/no-empty-function": Array [
      "error",
    ],
    "@typescript-eslint/no-empty-interface": Array [
      "error",
    ],
    "@typescript-eslint/no-explicit-any": Array [
      "off",
    ],
    "@typescript-eslint/no-extra-non-null-assertion": Array [
      "error",
    ],
    "@typescript-eslint/no-extra-parens": Array [
      "error",
    ],
    "@typescript-eslint/no-extra-semi": Array [
      "error",
    ],
    "@typescript-eslint/no-inferrable-types": Array [
      "error",
    ],
    "@typescript-eslint/no-loss-of-precision": Array [
      "error",
    ],
    "@typescript-eslint/no-misused-new": Array [
      "error",
    ],
    "@typescript-eslint/no-namespace": Array [
      "error",
    ],
    "@typescript-eslint/no-non-null-asserted-optional-chain": Array [
      "error",
    ],
    "@typescript-eslint/no-non-null-assertion": Array [
      "warn",
    ],
    "@typescript-eslint/no-this-alias": Array [
      "error",
    ],
    "@typescript-eslint/no-unnecessary-type-constraint": Array [
      "error",
    ],
    "@typescript-eslint/no-unused-vars": Array [
      "warn",
    ],
    "@typescript-eslint/no-var-requires": Array [
      "error",
    ],
    "@typescript-eslint/object-curly-spacing": Array [
      "error",
      "never",
    ],
    "@typescript-eslint/prefer-as-const": Array [
      "error",
    ],
    "@typescript-eslint/prefer-namespace-keyword": Array [
      "error",
    ],
    "@typescript-eslint/prefer-ts-expect-error": Array [
      "warn",
    ],
    "@typescript-eslint/quotes": Array [
      "error",
      "single",
      Object {
        "allowTemplateLiterals": true,
        "avoidEscape": true,
      },
    ],
    "@typescript-eslint/semi": Array [
      "error",
      "never",
    ],
    "@typescript-eslint/sort-type-union-intersection-members": Array [
      "error",
    ],
    "@typescript-eslint/space-before-blocks": Array [
      "error",
    ],
    "@typescript-eslint/space-before-function-paren": Array [
      "error",
      Object {
        "anonymous": "never",
        "asyncArrow": "always",
        "named": "never",
      },
    ],
    "@typescript-eslint/space-infix-ops": Array [
      "error",
    ],
    "@typescript-eslint/triple-slash-reference": Array [
      "error",
    ],
    "@typescript-eslint/type-annotation-spacing": Array [
      "error",
    ],
    "array-bracket-newline": Array [
      "error",
      Object {
        "minItems": 4,
      },
    ],
    "array-bracket-spacing": Array [
      "error",
      "never",
      Object {
        "arraysInArrays": true,
      },
    ],
    "array-element-newline": Array [
      "error",
      Object {
        "ArrayExpression": "consistent",
        "ArrayPattern": Object {
          "minItems": 4,
        },
      },
    ],
    "arrow-parens": Array [
      "error",
      "as-needed",
    ],
    "arrow-spacing": Array [
      "error",
    ],
    "beautiful-sort/import": Array [
      "error",
      Object {
        "order": Array [
          "obj",
          "defaultObj",
          "namespace",
          "default",
          "special",
          "none",
        ],
      },
    ],
    "comma-style": Array [
      "error",
      "last",
    ],
    "computed-property-spacing": Array [
      "error",
    ],
    "constructor-super": Array [
      "error",
    ],
    "curly": Array [
      "error",
      "all",
    ],
    "dot-location": Array [
      "error",
      "property",
    ],
    "eol-last": Array [
      "error",
    ],
    "eqeqeq": Array [
      "error",
    ],
    "for-direction": Array [
      "error",
    ],
    "function-call-argument-newline": Array [
      "error",
      "consistent",
    ],
    "function-paren-newline": Array [
      "error",
      Object {
        "minItems": 6,
      },
    ],
    "generator-star-spacing": Array [
      "error",
    ],
    "getter-return": Array [
      "error",
    ],
    "implicit-arrow-linebreak": Array [
      "error",
    ],
    "indent": Array [
      "error",
      "tab",
      Object {
        "MemberExpression": 1,
        "SwitchCase": 1,
        "flatTernaryExpressions": false,
        "ignoreComments": false,
        "offsetTernaryExpressions": false,
      },
    ],
    "json-files/require-unique-dependency-names": Array [
      "error",
    ],
    "json-files/sort-package-json": Array [
      "error",
    ],
    "key-spacing": Array [
      "error",
    ],
    "linebreak-style": Array [
      "error",
    ],
    "lines-around-comment": Array [
      "error",
      Object {
        "afterBlockComment": false,
        "afterLineComment": false,
        "allowBlockEnd": false,
        "allowBlockStart": true,
        "beforeBlockComment": true,
        "beforeLineComment": false,
      },
    ],
    "no-array-constructor": Array [
      "off",
    ],
    "no-async-promise-executor": Array [
      "error",
    ],
    "no-case-declarations": Array [
      "error",
    ],
    "no-class-assign": Array [
      "error",
    ],
    "no-compare-neg-zero": Array [
      "error",
    ],
    "no-cond-assign": Array [
      "error",
    ],
    "no-const-assign": Array [
      "error",
    ],
    "no-constant-condition": Array [
      "error",
    ],
    "no-control-regex": Array [
      "error",
    ],
    "no-debugger": Array [
      "error",
    ],
    "no-delete-var": Array [
      "error",
    ],
    "no-dupe-args": Array [
      "error",
    ],
    "no-dupe-class-members": Array [
      "error",
    ],
    "no-dupe-else-if": Array [
      "error",
    ],
    "no-dupe-keys": Array [
      "error",
    ],
    "no-duplicate-case": Array [
      "error",
    ],
    "no-else-return": Array [
      "error",
    ],
    "no-empty": Array [
      "error",
    ],
    "no-empty-character-class": Array [
      "error",
    ],
    "no-empty-function": Array [
      "off",
    ],
    "no-empty-pattern": Array [
      "error",
    ],
    "no-ex-assign": Array [
      "error",
    ],
    "no-extra-boolean-cast": Array [
      "error",
    ],
    "no-extra-semi": Array [
      "off",
    ],
    "no-fallthrough": Array [
      "error",
    ],
    "no-func-assign": Array [
      "error",
    ],
    "no-global-assign": Array [
      "error",
    ],
    "no-import-assign": Array [
      "error",
    ],
    "no-inner-declarations": Array [
      "error",
    ],
    "no-invalid-regexp": Array [
      "error",
    ],
    "no-irregular-whitespace": Array [
      "error",
    ],
    "no-lonely-if": Array [
      "error",
    ],
    "no-loss-of-precision": Array [
      "off",
    ],
    "no-misleading-character-class": Array [
      "error",
    ],
    "no-mixed-spaces-and-tabs": Array [
      "error",
    ],
    "no-multi-spaces": Array [
      "error",
    ],
    "no-multiple-empty-lines": Array [
      "error",
      Object {
        "max": 1,
      },
    ],
    "no-new-symbol": Array [
      "error",
    ],
    "no-nonoctal-decimal-escape": Array [
      "error",
    ],
    "no-obj-calls": Array [
      "error",
    ],
    "no-octal": Array [
      "error",
    ],
    "no-prototype-builtins": Array [
      "error",
    ],
    "no-redeclare": Array [
      "error",
    ],
    "no-regex-spaces": Array [
      "error",
    ],
    "no-self-assign": Array [
      "error",
    ],
    "no-setter-return": Array [
      "error",
    ],
    "no-shadow-restricted-names": Array [
      "error",
    ],
    "no-sparse-arrays": Array [
      "error",
    ],
    "no-this-before-super": Array [
      "error",
    ],
    "no-trailing-spaces": Array [
      "error",
    ],
    "no-undef": Array [
      "error",
    ],
    "no-undef-init": Array [
      "error",
    ],
    "no-unexpected-multiline": Array [
      "error",
    ],
    "no-unneeded-ternary": Array [
      "error",
    ],
    "no-unreachable": Array [
      "error",
    ],
    "no-unsafe-finally": Array [
      "error",
    ],
    "no-unsafe-negation": Array [
      "error",
    ],
    "no-unsafe-optional-chaining": Array [
      "error",
    ],
    "no-unused-labels": Array [
      "error",
    ],
    "no-unused-vars": Array [
      "off",
    ],
    "no-useless-backreference": Array [
      "error",
    ],
    "no-useless-catch": Array [
      "error",
    ],
    "no-useless-computed-key": Array [
      "error",
    ],
    "no-useless-escape": Array [
      "error",
    ],
    "no-useless-rename": Array [
      "error",
    ],
    "no-useless-return": Array [
      "error",
    ],
    "no-var": Array [
      "error",
    ],
    "no-whitespace-before-property": Array [
      "error",
    ],
    "no-with": Array [
      "error",
    ],
    "nonblock-statement-body-position": Array [
      "error",
      "below",
    ],
    "object-curly-newline": Array [
      "error",
      Object {
        "multiline": true,
      },
    ],
    "object-shorthand": Array [
      "error",
      "always",
      Object {
        "avoidExplicitReturnArrows": true,
      },
    ],
    "operator-linebreak": Array [
      "error",
    ],
    "padded-blocks": Array [
      "warn",
      "never",
    ],
    "prefer-arrow-callback": Array [
      "error",
    ],
    "prefer-const": Array [
      "warn",
    ],
    "prefer-object-spread": Array [
      "error",
    ],
    "prefer-template": Array [
      "error",
    ],
    "quote-props": Array [
      "error",
      "as-needed",
    ],
    "require-yield": Array [
      "error",
    ],
    "rest-spread-spacing": Array [
      "error",
    ],
    "semi-spacing": Array [
      "error",
    ],
    "semi-style": Array [
      "error",
    ],
    "sort-class-members/sort-class-members": Array [
      2,
      Object {
        "accessorPairPositioning": "getThenSet",
        "order": Array [
          "[static-properties]",
          "[properties]",
          "[conventional-private-properties]",
          "constructor",
          "[getters]",
          "[setters]",
          "[accessor-pairs]",
          "[static-methods]",
          "[methods]",
          "[async-methods]",
          "[conventional-private-methods]",
          "[everything-else]",
        ],
        "stopAfterFirstProblem": false,
      },
    ],
    "space-in-parens": Array [
      "error",
    ],
    "space-unary-ops": Array [
      "error",
    ],
    "spaced-comment": Array [
      "error",
      "always",
    ],
    "switch-colon-spacing": Array [
      "error",
    ],
    "template-curly-spacing": Array [
      "error",
    ],
    "template-tag-spacing": Array [
      "error",
    ],
    "use-isnan": Array [
      "error",
    ],
    "valid-typeof": Array [
      "error",
    ],
    "vue/attribute-hyphenation": Array [
      "warn",
    ],
    "vue/attributes-order": Array [
      "warn",
    ],
    "vue/comment-directive": Array [
      "error",
    ],
    "vue/component-definition-name-casing": Array [
      "warn",
    ],
    "vue/component-tags-order": Array [
      "warn",
    ],
    "vue/first-attribute-linebreak": Array [
      "warn",
    ],
    "vue/html-closing-bracket-newline": Array [
      "warn",
    ],
    "vue/html-closing-bracket-spacing": Array [
      "off",
    ],
    "vue/html-end-tags": Array [
      "warn",
    ],
    "vue/html-indent": Array [
      "error",
      "tab",
    ],
    "vue/html-quotes": Array [
      "warn",
    ],
    "vue/html-self-closing": Array [
      "warn",
    ],
    "vue/jsx-uses-vars": Array [
      "error",
    ],
    "vue/max-attributes-per-line": Array [
      "error",
      Object {
        "multiline": Object {
          "max": 1,
        },
        "singleline": Object {
          "max": 4,
        },
      },
    ],
    "vue/multi-word-component-names": Array [
      "error",
    ],
    "vue/multiline-html-element-content-newline": Array [
      "warn",
    ],
    "vue/mustache-interpolation-spacing": Array [
      "warn",
    ],
    "vue/no-arrow-functions-in-watch": Array [
      "error",
    ],
    "vue/no-async-in-computed-properties": Array [
      "error",
    ],
    "vue/no-child-content": Array [
      "error",
    ],
    "vue/no-computed-properties-in-data": Array [
      "error",
    ],
    "vue/no-deprecated-data-object-declaration": Array [
      "error",
    ],
    "vue/no-deprecated-destroyed-lifecycle": Array [
      "error",
    ],
    "vue/no-deprecated-dollar-listeners-api": Array [
      "error",
    ],
    "vue/no-deprecated-dollar-scopedslots-api": Array [
      "error",
    ],
    "vue/no-deprecated-events-api": Array [
      "error",
    ],
    "vue/no-deprecated-filter": Array [
      "error",
    ],
    "vue/no-deprecated-functional-template": Array [
      "error",
    ],
    "vue/no-deprecated-html-element-is": Array [
      "error",
    ],
    "vue/no-deprecated-inline-template": Array [
      "error",
    ],
    "vue/no-deprecated-props-default-this": Array [
      "error",
    ],
    "vue/no-deprecated-router-link-tag-prop": Array [
      "error",
    ],
    "vue/no-deprecated-scope-attribute": Array [
      "error",
    ],
    "vue/no-deprecated-slot-attribute": Array [
      "error",
    ],
    "vue/no-deprecated-slot-scope-attribute": Array [
      "error",
    ],
    "vue/no-deprecated-v-bind-sync": Array [
      "error",
    ],
    "vue/no-deprecated-v-is": Array [
      "error",
    ],
    "vue/no-deprecated-v-on-native-modifier": Array [
      "error",
    ],
    "vue/no-deprecated-v-on-number-modifiers": Array [
      "error",
    ],
    "vue/no-deprecated-vue-config-keycodes": Array [
      "error",
    ],
    "vue/no-dupe-keys": Array [
      "error",
    ],
    "vue/no-dupe-v-else-if": Array [
      "error",
    ],
    "vue/no-duplicate-attributes": Array [
      "error",
    ],
    "vue/no-export-in-script-setup": Array [
      "error",
    ],
    "vue/no-expose-after-await": Array [
      "error",
    ],
    "vue/no-lifecycle-after-await": Array [
      "error",
    ],
    "vue/no-lone-template": Array [
      "warn",
    ],
    "vue/no-multi-spaces": Array [
      "warn",
    ],
    "vue/no-multiple-slot-args": Array [
      "warn",
    ],
    "vue/no-mutating-props": Array [
      "error",
    ],
    "vue/no-parsing-error": Array [
      "error",
    ],
    "vue/no-ref-as-operand": Array [
      "error",
    ],
    "vue/no-reserved-component-names": Array [
      "error",
    ],
    "vue/no-reserved-keys": Array [
      "error",
    ],
    "vue/no-reserved-props": Array [
      "error",
    ],
    "vue/no-setup-props-destructure": Array [
      "off",
    ],
    "vue/no-shared-component-data": Array [
      "error",
    ],
    "vue/no-side-effects-in-computed-properties": Array [
      "error",
    ],
    "vue/no-spaces-around-equal-signs-in-attribute": Array [
      "warn",
    ],
    "vue/no-static-inline-styles": Array [
      "error",
      Object {
        "allowBinding": true,
      },
    ],
    "vue/no-template-key": Array [
      "error",
    ],
    "vue/no-template-shadow": Array [
      "warn",
    ],
    "vue/no-textarea-mustache": Array [
      "error",
    ],
    "vue/no-unused-components": Array [
      "error",
    ],
    "vue/no-unused-vars": Array [
      "error",
    ],
    "vue/no-use-computed-property-like-method": Array [
      "error",
    ],
    "vue/no-use-v-if-with-v-for": Array [
      "error",
    ],
    "vue/no-useless-template-attributes": Array [
      "error",
    ],
    "vue/no-v-for-template-key-on-child": Array [
      "error",
    ],
    "vue/no-v-html": Array [
      "warn",
    ],
    "vue/no-v-text-v-html-on-component": Array [
      "error",
    ],
    "vue/no-watch-after-await": Array [
      "error",
    ],
    "vue/one-component-per-file": Array [
      "warn",
    ],
    "vue/order-in-components": Array [
      "warn",
    ],
    "vue/prefer-import-from-vue": Array [
      "error",
    ],
    "vue/prop-name-casing": Array [
      "warn",
    ],
    "vue/require-component-is": Array [
      "error",
    ],
    "vue/require-default-prop": Array [
      "off",
    ],
    "vue/require-explicit-emits": Array [
      "warn",
    ],
    "vue/require-prop-type-constructor": Array [
      "error",
    ],
    "vue/require-prop-types": Array [
      "warn",
    ],
    "vue/require-render-return": Array [
      "error",
    ],
    "vue/require-slots-as-functions": Array [
      "error",
    ],
    "vue/require-toggle-inside-transition": Array [
      "error",
    ],
    "vue/require-v-for-key": Array [
      "error",
    ],
    "vue/require-valid-default-prop": Array [
      "error",
    ],
    "vue/return-in-computed-property": Array [
      "error",
    ],
    "vue/return-in-emits-validator": Array [
      "error",
    ],
    "vue/singleline-html-element-content-newline": Array [
      "warn",
    ],
    "vue/this-in-template": Array [
      "warn",
    ],
    "vue/use-v-on-exact": Array [
      "error",
    ],
    "vue/v-bind-style": Array [
      "warn",
    ],
    "vue/v-on-event-hyphenation": Array [
      "warn",
    ],
    "vue/v-on-style": Array [
      "warn",
    ],
    "vue/v-slot-style": Array [
      "warn",
    ],
    "vue/valid-attribute-name": Array [
      "error",
    ],
    "vue/valid-define-emits": Array [
      "error",
    ],
    "vue/valid-define-props": Array [
      "error",
    ],
    "vue/valid-next-tick": Array [
      "error",
    ],
    "vue/valid-template-root": Array [
      "error",
    ],
    "vue/valid-v-bind": Array [
      "error",
    ],
    "vue/valid-v-cloak": Array [
      "error",
    ],
    "vue/valid-v-else": Array [
      "error",
    ],
    "vue/valid-v-else-if": Array [
      "error",
    ],
    "vue/valid-v-for": Array [
      "error",
    ],
    "vue/valid-v-html": Array [
      "error",
    ],
    "vue/valid-v-if": Array [
      "error",
    ],
    "vue/valid-v-is": Array [
      "error",
    ],
    "vue/valid-v-memo": Array [
      "error",
    ],
    "vue/valid-v-model": Array [
      "error",
    ],
    "vue/valid-v-on": Array [
      "error",
    ],
    "vue/valid-v-once": Array [
      "error",
    ],
    "vue/valid-v-pre": Array [
      "error",
    ],
    "vue/valid-v-show": Array [
      "error",
    ],
    "vue/valid-v-slot": Array [
      "error",
    ],
    "vue/valid-v-text": Array [
      "error",
    ],
    "yield-star-spacing": Array [
      "error",
    ],
  },
  "settings": Object {},
}
`;

exports[`Validate ESLint configs .add(Validate ESLint configs for bad.json) should return the proper lint results 1`] = `
Array [
  Object {
    "errorCount": 0,
    "fatalErrorCount": 0,
    "filePath": "C:\\\\Data\\\\Development\\\\Projects\\\\Packages\\\\configs\\\\packages\\\\eslint-config\\\\__fixtures__\\\\bad.json",
    "fixableErrorCount": 0,
    "fixableWarningCount": 0,
    "messages": Array [],
    "suppressedMessages": Array [],
    "usedDeprecatedRules": Array [],
    "warningCount": 0,
  },
]
`;

exports[`Validate ESLint configs .add(Validate ESLint configs for bad-ts.ts) should return the proper config 1`] = `
Object {
  "env": Object {
    "browser": true,
    "es2021": true,
    "es6": true,
    "node": true,
    "vue/setup-compiler-macros": true,
  },
  "globals": Object {},
  "ignorePatterns": Array [],
  "noInlineConfig": undefined,
  "parser": "C:\\\\Data\\\\Development\\\\Projects\\\\Packages\\\\configs\\\\node_modules\\\\.pnpm\\\\vue-eslint-parser@9.0.3_eslint@8.21.0\\\\node_modules\\\\vue-eslint-parser\\\\index.js",
  "parserOptions": Object {
    "ecmaVersion": 2020,
    "parser": "@typescript-eslint/parser",
    "sourceType": "module",
  },
  "plugins": Array [
    "@typescript-eslint",
    "vue",
    "json-files",
    "beautiful-sort",
    "sort-class-members",
  ],
  "reportUnusedDisableDirectives": undefined,
  "rules": Object {
    "@typescript-eslint/adjacent-overload-signatures": Array [
      "error",
    ],
    "@typescript-eslint/ban-ts-comment": Array [
      "off",
    ],
    "@typescript-eslint/ban-types": Array [
      "error",
    ],
    "@typescript-eslint/brace-style": Array [
      "error",
      "1tbs",
    ],
    "@typescript-eslint/comma-dangle": Array [
      "error",
      "never",
    ],
    "@typescript-eslint/comma-spacing": Array [
      "error",
      Object {
        "after": true,
        "before": false,
      },
    ],
    "@typescript-eslint/func-call-spacing": Array [
      "error",
    ],
    "@typescript-eslint/keyword-spacing": Array [
      "error",
    ],
    "@typescript-eslint/lines-between-class-members": Array [
      "error",
      "always",
      Object {
        "exceptAfterSingleLine": true,
      },
    ],
    "@typescript-eslint/member-delimiter-style": Array [
      "error",
      Object {
        "multiline": Object {
          "delimiter": "none",
          "requireLast": true,
        },
        "multilineDetection": "brackets",
        "singleline": Object {
          "delimiter": "semi",
          "requireLast": false,
        },
      },
    ],
    "@typescript-eslint/method-signature-style": Array [
      "warn",
      "method",
    ],
    "@typescript-eslint/no-array-constructor": Array [
      "error",
    ],
    "@typescript-eslint/no-empty-function": Array [
      "error",
    ],
    "@typescript-eslint/no-empty-interface": Array [
      "error",
    ],
    "@typescript-eslint/no-explicit-any": Array [
      "off",
    ],
    "@typescript-eslint/no-extra-non-null-assertion": Array [
      "error",
    ],
    "@typescript-eslint/no-extra-parens": Array [
      "error",
    ],
    "@typescript-eslint/no-extra-semi": Array [
      "error",
    ],
    "@typescript-eslint/no-inferrable-types": Array [
      "error",
    ],
    "@typescript-eslint/no-loss-of-precision": Array [
      "error",
    ],
    "@typescript-eslint/no-misused-new": Array [
      "error",
    ],
    "@typescript-eslint/no-namespace": Array [
      "error",
    ],
    "@typescript-eslint/no-non-null-asserted-optional-chain": Array [
      "error",
    ],
    "@typescript-eslint/no-non-null-assertion": Array [
      "warn",
    ],
    "@typescript-eslint/no-this-alias": Array [
      "error",
    ],
    "@typescript-eslint/no-unnecessary-type-constraint": Array [
      "error",
    ],
    "@typescript-eslint/no-unused-vars": Array [
      "warn",
    ],
    "@typescript-eslint/no-var-requires": Array [
      "error",
    ],
    "@typescript-eslint/object-curly-spacing": Array [
      "error",
      "never",
    ],
    "@typescript-eslint/prefer-as-const": Array [
      "error",
    ],
    "@typescript-eslint/prefer-namespace-keyword": Array [
      "error",
    ],
    "@typescript-eslint/prefer-ts-expect-error": Array [
      "warn",
    ],
    "@typescript-eslint/quotes": Array [
      "error",
      "single",
      Object {
        "allowTemplateLiterals": true,
        "avoidEscape": true,
      },
    ],
    "@typescript-eslint/semi": Array [
      "error",
      "never",
    ],
    "@typescript-eslint/sort-type-union-intersection-members": Array [
      "error",
    ],
    "@typescript-eslint/space-before-blocks": Array [
      "error",
    ],
    "@typescript-eslint/space-before-function-paren": Array [
      "error",
      Object {
        "anonymous": "never",
        "asyncArrow": "always",
        "named": "never",
      },
    ],
    "@typescript-eslint/space-infix-ops": Array [
      "error",
    ],
    "@typescript-eslint/triple-slash-reference": Array [
      "error",
    ],
    "@typescript-eslint/type-annotation-spacing": Array [
      "error",
    ],
    "array-bracket-newline": Array [
      "error",
      Object {
        "minItems": 4,
      },
    ],
    "array-bracket-spacing": Array [
      "error",
      "never",
      Object {
        "arraysInArrays": true,
      },
    ],
    "array-element-newline": Array [
      "error",
      Object {
        "ArrayExpression": "consistent",
        "ArrayPattern": Object {
          "minItems": 4,
        },
      },
    ],
    "arrow-parens": Array [
      "error",
      "as-needed",
    ],
    "arrow-spacing": Array [
      "error",
    ],
    "beautiful-sort/import": Array [
      "error",
      Object {
        "order": Array [
          "obj",
          "defaultObj",
          "namespace",
          "default",
          "special",
          "none",
        ],
      },
    ],
    "comma-style": Array [
      "error",
      "last",
    ],
    "computed-property-spacing": Array [
      "error",
    ],
    "constructor-super": Array [
      "off",
    ],
    "curly": Array [
      "error",
      "all",
    ],
    "dot-location": Array [
      "error",
      "property",
    ],
    "eol-last": Array [
      "error",
    ],
    "eqeqeq": Array [
      "error",
    ],
    "for-direction": Array [
      "error",
    ],
    "function-call-argument-newline": Array [
      "error",
      "consistent",
    ],
    "function-paren-newline": Array [
      "error",
      Object {
        "minItems": 6,
      },
    ],
    "generator-star-spacing": Array [
      "error",
    ],
    "getter-return": Array [
      "off",
    ],
    "implicit-arrow-linebreak": Array [
      "error",
    ],
    "indent": Array [
      "error",
      "tab",
      Object {
        "MemberExpression": 1,
        "SwitchCase": 1,
        "flatTernaryExpressions": false,
        "ignoreComments": false,
        "offsetTernaryExpressions": false,
      },
    ],
    "json-files/require-unique-dependency-names": Array [
      "error",
    ],
    "json-files/sort-package-json": Array [
      "error",
    ],
    "key-spacing": Array [
      "error",
    ],
    "linebreak-style": Array [
      "error",
    ],
    "lines-around-comment": Array [
      "error",
      Object {
        "afterBlockComment": false,
        "afterLineComment": false,
        "allowBlockEnd": false,
        "allowBlockStart": true,
        "beforeBlockComment": true,
        "beforeLineComment": false,
      },
    ],
    "no-array-constructor": Array [
      "off",
    ],
    "no-async-promise-executor": Array [
      "error",
    ],
    "no-case-declarations": Array [
      "error",
    ],
    "no-class-assign": Array [
      "error",
    ],
    "no-compare-neg-zero": Array [
      "error",
    ],
    "no-cond-assign": Array [
      "error",
    ],
    "no-const-assign": Array [
      "off",
    ],
    "no-constant-condition": Array [
      "error",
    ],
    "no-control-regex": Array [
      "error",
    ],
    "no-debugger": Array [
      "error",
    ],
    "no-delete-var": Array [
      "error",
    ],
    "no-dupe-args": Array [
      "off",
    ],
    "no-dupe-class-members": Array [
      "off",
    ],
    "no-dupe-else-if": Array [
      "error",
    ],
    "no-dupe-keys": Array [
      "off",
    ],
    "no-duplicate-case": Array [
      "error",
    ],
    "no-else-return": Array [
      "error",
    ],
    "no-empty": Array [
      "error",
    ],
    "no-empty-character-class": Array [
      "error",
    ],
    "no-empty-function": Array [
      "off",
    ],
    "no-empty-pattern": Array [
      "error",
    ],
    "no-ex-assign": Array [
      "error",
    ],
    "no-extra-boolean-cast": Array [
      "error",
    ],
    "no-extra-semi": Array [
      "off",
    ],
    "no-fallthrough": Array [
      "error",
    ],
    "no-func-assign": Array [
      "off",
    ],
    "no-global-assign": Array [
      "error",
    ],
    "no-import-assign": Array [
      "off",
    ],
    "no-inner-declarations": Array [
      "error",
    ],
    "no-invalid-regexp": Array [
      "error",
    ],
    "no-irregular-whitespace": Array [
      "error",
    ],
    "no-lonely-if": Array [
      "error",
    ],
    "no-loss-of-precision": Array [
      "off",
    ],
    "no-misleading-character-class": Array [
      "error",
    ],
    "no-mixed-spaces-and-tabs": Array [
      "error",
    ],
    "no-multi-spaces": Array [
      "error",
    ],
    "no-multiple-empty-lines": Array [
      "error",
      Object {
        "max": 1,
      },
    ],
    "no-new-symbol": Array [
      "off",
    ],
    "no-nonoctal-decimal-escape": Array [
      "error",
    ],
    "no-obj-calls": Array [
      "off",
    ],
    "no-octal": Array [
      "error",
    ],
    "no-prototype-builtins": Array [
      "error",
    ],
    "no-redeclare": Array [
      "off",
    ],
    "no-regex-spaces": Array [
      "error",
    ],
    "no-self-assign": Array [
      "error",
    ],
    "no-setter-return": Array [
      "off",
    ],
    "no-shadow-restricted-names": Array [
      "error",
    ],
    "no-sparse-arrays": Array [
      "error",
    ],
    "no-this-before-super": Array [
      "off",
    ],
    "no-trailing-spaces": Array [
      "error",
    ],
    "no-undef": Array [
      "off",
    ],
    "no-undef-init": Array [
      "error",
    ],
    "no-unexpected-multiline": Array [
      "error",
    ],
    "no-unneeded-ternary": Array [
      "error",
    ],
    "no-unreachable": Array [
      "off",
    ],
    "no-unsafe-finally": Array [
      "error",
    ],
    "no-unsafe-negation": Array [
      "off",
    ],
    "no-unsafe-optional-chaining": Array [
      "error",
    ],
    "no-unused-labels": Array [
      "error",
    ],
    "no-unused-vars": Array [
      "off",
    ],
    "no-useless-backreference": Array [
      "error",
    ],
    "no-useless-catch": Array [
      "error",
    ],
    "no-useless-computed-key": Array [
      "error",
    ],
    "no-useless-escape": Array [
      "error",
    ],
    "no-useless-rename": Array [
      "error",
    ],
    "no-useless-return": Array [
      "error",
    ],
    "no-var": Array [
      "error",
    ],
    "no-whitespace-before-property": Array [
      "error",
    ],
    "no-with": Array [
      "error",
    ],
    "nonblock-statement-body-position": Array [
      "error",
      "below",
    ],
    "object-curly-newline": Array [
      "error",
      Object {
        "multiline": true,
      },
    ],
    "object-shorthand": Array [
      "error",
      "always",
      Object {
        "avoidExplicitReturnArrows": true,
      },
    ],
    "operator-linebreak": Array [
      "error",
    ],
    "padded-blocks": Array [
      "warn",
      "never",
    ],
    "prefer-arrow-callback": Array [
      "error",
    ],
    "prefer-const": Array [
      "warn",
    ],
    "prefer-object-spread": Array [
      "error",
    ],
    "prefer-rest-params": Array [
      "error",
    ],
    "prefer-spread": Array [
      "error",
    ],
    "prefer-template": Array [
      "error",
    ],
    "quote-props": Array [
      "error",
      "as-needed",
    ],
    "require-yield": Array [
      "error",
    ],
    "rest-spread-spacing": Array [
      "error",
    ],
    "semi-spacing": Array [
      "error",
    ],
    "semi-style": Array [
      "error",
    ],
    "sort-class-members/sort-class-members": Array [
      2,
      Object {
        "accessorPairPositioning": "getThenSet",
        "order": Array [
          "[static-properties]",
          "[properties]",
          "[conventional-private-properties]",
          "constructor",
          "[getters]",
          "[setters]",
          "[accessor-pairs]",
          "[static-methods]",
          "[methods]",
          "[async-methods]",
          "[conventional-private-methods]",
          "[everything-else]",
        ],
        "stopAfterFirstProblem": false,
      },
    ],
    "space-in-parens": Array [
      "error",
    ],
    "space-unary-ops": Array [
      "error",
    ],
    "spaced-comment": Array [
      "error",
      "always",
    ],
    "switch-colon-spacing": Array [
      "error",
    ],
    "template-curly-spacing": Array [
      "error",
    ],
    "template-tag-spacing": Array [
      "error",
    ],
    "use-isnan": Array [
      "error",
    ],
    "valid-typeof": Array [
      "off",
    ],
    "vue/attribute-hyphenation": Array [
      "warn",
    ],
    "vue/attributes-order": Array [
      "warn",
    ],
    "vue/comment-directive": Array [
      "error",
    ],
    "vue/component-definition-name-casing": Array [
      "warn",
    ],
    "vue/component-tags-order": Array [
      "warn",
    ],
    "vue/first-attribute-linebreak": Array [
      "warn",
    ],
    "vue/html-closing-bracket-newline": Array [
      "warn",
    ],
    "vue/html-closing-bracket-spacing": Array [
      "off",
    ],
    "vue/html-end-tags": Array [
      "warn",
    ],
    "vue/html-indent": Array [
      "error",
      "tab",
    ],
    "vue/html-quotes": Array [
      "warn",
    ],
    "vue/html-self-closing": Array [
      "warn",
    ],
    "vue/jsx-uses-vars": Array [
      "error",
    ],
    "vue/max-attributes-per-line": Array [
      "error",
      Object {
        "multiline": Object {
          "max": 1,
        },
        "singleline": Object {
          "max": 4,
        },
      },
    ],
    "vue/multi-word-component-names": Array [
      "error",
    ],
    "vue/multiline-html-element-content-newline": Array [
      "warn",
    ],
    "vue/mustache-interpolation-spacing": Array [
      "warn",
    ],
    "vue/no-arrow-functions-in-watch": Array [
      "error",
    ],
    "vue/no-async-in-computed-properties": Array [
      "error",
    ],
    "vue/no-child-content": Array [
      "error",
    ],
    "vue/no-computed-properties-in-data": Array [
      "error",
    ],
    "vue/no-deprecated-data-object-declaration": Array [
      "error",
    ],
    "vue/no-deprecated-destroyed-lifecycle": Array [
      "error",
    ],
    "vue/no-deprecated-dollar-listeners-api": Array [
      "error",
    ],
    "vue/no-deprecated-dollar-scopedslots-api": Array [
      "error",
    ],
    "vue/no-deprecated-events-api": Array [
      "error",
    ],
    "vue/no-deprecated-filter": Array [
      "error",
    ],
    "vue/no-deprecated-functional-template": Array [
      "error",
    ],
    "vue/no-deprecated-html-element-is": Array [
      "error",
    ],
    "vue/no-deprecated-inline-template": Array [
      "error",
    ],
    "vue/no-deprecated-props-default-this": Array [
      "error",
    ],
    "vue/no-deprecated-router-link-tag-prop": Array [
      "error",
    ],
    "vue/no-deprecated-scope-attribute": Array [
      "error",
    ],
    "vue/no-deprecated-slot-attribute": Array [
      "error",
    ],
    "vue/no-deprecated-slot-scope-attribute": Array [
      "error",
    ],
    "vue/no-deprecated-v-bind-sync": Array [
      "error",
    ],
    "vue/no-deprecated-v-is": Array [
      "error",
    ],
    "vue/no-deprecated-v-on-native-modifier": Array [
      "error",
    ],
    "vue/no-deprecated-v-on-number-modifiers": Array [
      "error",
    ],
    "vue/no-deprecated-vue-config-keycodes": Array [
      "error",
    ],
    "vue/no-dupe-keys": Array [
      "error",
    ],
    "vue/no-dupe-v-else-if": Array [
      "error",
    ],
    "vue/no-duplicate-attributes": Array [
      "error",
    ],
    "vue/no-export-in-script-setup": Array [
      "error",
    ],
    "vue/no-expose-after-await": Array [
      "error",
    ],
    "vue/no-lifecycle-after-await": Array [
      "error",
    ],
    "vue/no-lone-template": Array [
      "warn",
    ],
    "vue/no-multi-spaces": Array [
      "warn",
    ],
    "vue/no-multiple-slot-args": Array [
      "warn",
    ],
    "vue/no-mutating-props": Array [
      "error",
    ],
    "vue/no-parsing-error": Array [
      "error",
    ],
    "vue/no-ref-as-operand": Array [
      "error",
    ],
    "vue/no-reserved-component-names": Array [
      "error",
    ],
    "vue/no-reserved-keys": Array [
      "error",
    ],
    "vue/no-reserved-props": Array [
      "error",
    ],
    "vue/no-setup-props-destructure": Array [
      "off",
    ],
    "vue/no-shared-component-data": Array [
      "error",
    ],
    "vue/no-side-effects-in-computed-properties": Array [
      "error",
    ],
    "vue/no-spaces-around-equal-signs-in-attribute": Array [
      "warn",
    ],
    "vue/no-static-inline-styles": Array [
      "error",
      Object {
        "allowBinding": true,
      },
    ],
    "vue/no-template-key": Array [
      "error",
    ],
    "vue/no-template-shadow": Array [
      "warn",
    ],
    "vue/no-textarea-mustache": Array [
      "error",
    ],
    "vue/no-unused-components": Array [
      "error",
    ],
    "vue/no-unused-vars": Array [
      "error",
    ],
    "vue/no-use-computed-property-like-method": Array [
      "error",
    ],
    "vue/no-use-v-if-with-v-for": Array [
      "error",
    ],
    "vue/no-useless-template-attributes": Array [
      "error",
    ],
    "vue/no-v-for-template-key-on-child": Array [
      "error",
    ],
    "vue/no-v-html": Array [
      "warn",
    ],
    "vue/no-v-text-v-html-on-component": Array [
      "error",
    ],
    "vue/no-watch-after-await": Array [
      "error",
    ],
    "vue/one-component-per-file": Array [
      "warn",
    ],
    "vue/order-in-components": Array [
      "warn",
    ],
    "vue/prefer-import-from-vue": Array [
      "error",
    ],
    "vue/prop-name-casing": Array [
      "warn",
    ],
    "vue/require-component-is": Array [
      "error",
    ],
    "vue/require-default-prop": Array [
      "off",
    ],
    "vue/require-explicit-emits": Array [
      "warn",
    ],
    "vue/require-prop-type-constructor": Array [
      "error",
    ],
    "vue/require-prop-types": Array [
      "warn",
    ],
    "vue/require-render-return": Array [
      "error",
    ],
    "vue/require-slots-as-functions": Array [
      "error",
    ],
    "vue/require-toggle-inside-transition": Array [
      "error",
    ],
    "vue/require-v-for-key": Array [
      "error",
    ],
    "vue/require-valid-default-prop": Array [
      "error",
    ],
    "vue/return-in-computed-property": Array [
      "error",
    ],
    "vue/return-in-emits-validator": Array [
      "error",
    ],
    "vue/singleline-html-element-content-newline": Array [
      "warn",
    ],
    "vue/this-in-template": Array [
      "warn",
    ],
    "vue/use-v-on-exact": Array [
      "error",
    ],
    "vue/v-bind-style": Array [
      "warn",
    ],
    "vue/v-on-event-hyphenation": Array [
      "warn",
    ],
    "vue/v-on-style": Array [
      "warn",
    ],
    "vue/v-slot-style": Array [
      "warn",
    ],
    "vue/valid-attribute-name": Array [
      "error",
    ],
    "vue/valid-define-emits": Array [
      "error",
    ],
    "vue/valid-define-props": Array [
      "error",
    ],
    "vue/valid-next-tick": Array [
      "error",
    ],
    "vue/valid-template-root": Array [
      "error",
    ],
    "vue/valid-v-bind": Array [
      "error",
    ],
    "vue/valid-v-cloak": Array [
      "error",
    ],
    "vue/valid-v-else": Array [
      "error",
    ],
    "vue/valid-v-else-if": Array [
      "error",
    ],
    "vue/valid-v-for": Array [
      "error",
    ],
    "vue/valid-v-html": Array [
      "error",
    ],
    "vue/valid-v-if": Array [
      "error",
    ],
    "vue/valid-v-is": Array [
      "error",
    ],
    "vue/valid-v-memo": Array [
      "error",
    ],
    "vue/valid-v-model": Array [
      "error",
    ],
    "vue/valid-v-on": Array [
      "error",
    ],
    "vue/valid-v-once": Array [
      "error",
    ],
    "vue/valid-v-pre": Array [
      "error",
    ],
    "vue/valid-v-show": Array [
      "error",
    ],
    "vue/valid-v-slot": Array [
      "error",
    ],
    "vue/valid-v-text": Array [
      "error",
    ],
    "yield-star-spacing": Array [
      "error",
    ],
  },
  "settings": Object {},
}
`;

exports[`Validate ESLint configs .add(Validate ESLint configs for bad-ts.ts) should return the proper lint results 1`] = `
Array [
  Object {
    "errorCount": 30,
    "fatalErrorCount": 0,
    "filePath": "C:\\\\Data\\\\Development\\\\Projects\\\\Packages\\\\configs\\\\packages\\\\eslint-config\\\\__fixtures__\\\\bad-ts.ts",
    "fixableErrorCount": 26,
    "fixableWarningCount": 3,
    "messages": Array [
      Object {
        "column": 1,
        "endColumn": 2,
        "endLine": 2,
        "fix": Object {
          "range": Array [
            14,
            15,
          ],
          "text": " ",
        },
        "line": 2,
        "message": "Opening curly brace does not appear on the same line as controlling statement.",
        "messageId": "nextLineOpen",
        "nodeType": "Punctuator",
        "ruleId": "@typescript-eslint/brace-style",
        "severity": 2,
      },
      Object {
        "column": 16,
        "endColumn": 16,
        "endLine": 3,
        "fix": Object {
          "range": Array [
            31,
            32,
          ],
          "text": "",
        },
        "line": 3,
        "message": "Unexpected separator (;).",
        "messageId": "unexpectedSemi",
        "nodeType": "Punctuator",
        "ruleId": "@typescript-eslint/member-delimiter-style",
        "severity": 2,
      },
      Object {
        "column": 1,
        "endColumn": 1,
        "endLine": 6,
        "fix": Object {
          "range": Array [
            33,
            34,
          ],
          "text": "",
        },
        "line": 5,
        "message": "More than 1 blank line not allowed.",
        "messageId": "consecutiveBlank",
        "nodeType": "Program",
        "ruleId": "no-multiple-empty-lines",
        "severity": 2,
      },
      Object {
        "column": 1,
        "endColumn": 3,
        "endLine": 7,
        "line": 7,
        "message": "Mixed spaces and tabs.",
        "messageId": "mixedSpacesAndTabs",
        "nodeType": "Program",
        "ruleId": "no-mixed-spaces-and-tabs",
        "severity": 2,
      },
      Object {
        "column": 11,
        "endColumn": 11,
        "endLine": 7,
        "fix": Object {
          "range": Array [
            50,
            51,
          ],
          "text": "",
        },
        "line": 7,
        "message": "Unexpected separator (;).",
        "messageId": "unexpectedSemi",
        "nodeType": "Punctuator",
        "ruleId": "@typescript-eslint/member-delimiter-style",
        "severity": 2,
      },
      Object {
        "column": 1,
        "endColumn": 3,
        "endLine": 16,
        "fix": Object {
          "range": Array [
            75,
            79,
          ],
          "text": "
",
        },
        "line": 12,
        "message": "Block must not be padded by blank lines.",
        "messageId": "neverPadBlock",
        "nodeType": "ClassBody",
        "ruleId": "padded-blocks",
        "severity": 1,
      },
      Object {
        "column": 1,
        "endColumn": 2,
        "endLine": 12,
        "fix": Object {
          "range": Array [
            72,
            74,
          ],
          "text": " ",
        },
        "line": 12,
        "message": "Opening curly brace does not appear on the same line as controlling statement.",
        "messageId": "nextLineOpen",
        "nodeType": "Punctuator",
        "ruleId": "@typescript-eslint/brace-style",
        "severity": 2,
      },
      Object {
        "column": 1,
        "endColumn": 1,
        "endLine": 16,
        "fix": Object {
          "range": Array [
            76,
            78,
          ],
          "text": "",
        },
        "line": 14,
        "message": "More than 1 blank line not allowed.",
        "messageId": "consecutiveBlank",
        "nodeType": "Program",
        "ruleId": "no-multiple-empty-lines",
        "severity": 2,
      },
      Object {
        "column": 1,
        "endColumn": 3,
        "endLine": 16,
        "fix": Object {
          "range": Array [
            79,
            81,
          ],
          "text": "	",
        },
        "line": 16,
        "message": "Expected indentation of 1 tab but found 2 spaces.",
        "messageId": "wrongIndentation",
        "nodeType": "Identifier",
        "ruleId": "indent",
        "severity": 2,
      },
      Object {
        "column": 15,
        "endColumn": 16,
        "endLine": 16,
        "fix": Object {
          "range": Array [
            87,
            102,
          ],
          "text": "string



  id",
        },
        "line": 16,
        "message": "Extra semicolon.",
        "messageId": "extraSemi",
        "nodeType": "PropertyDefinition",
        "ruleId": "@typescript-eslint/semi",
        "severity": 2,
      },
      Object {
        "column": 1,
        "endColumn": 1,
        "endLine": 20,
        "fix": Object {
          "range": Array [
            95,
            97,
          ],
          "text": "",
        },
        "line": 18,
        "message": "More than 1 blank line not allowed.",
        "messageId": "consecutiveBlank",
        "nodeType": "Program",
        "ruleId": "no-multiple-empty-lines",
        "severity": 2,
      },
      Object {
        "column": 1,
        "endColumn": 3,
        "endLine": 20,
        "fix": Object {
          "range": Array [
            98,
            100,
          ],
          "text": "	",
        },
        "line": 20,
        "message": "Expected indentation of 1 tab but found 2 spaces.",
        "messageId": "wrongIndentation",
        "nodeType": "Identifier",
        "ruleId": "indent",
        "severity": 2,
      },
      Object {
        "column": 13,
        "endColumn": 14,
        "endLine": 20,
        "fix": Object {
          "range": Array [
            104,
            126,
          ],
          "text": "number

  constructor",
        },
        "line": 20,
        "message": "Extra semicolon.",
        "messageId": "extraSemi",
        "nodeType": "PropertyDefinition",
        "ruleId": "@typescript-eslint/semi",
        "severity": 2,
      },
      Object {
        "column": 1,
        "endColumn": 3,
        "endLine": 22,
        "fix": Object {
          "range": Array [
            113,
            115,
          ],
          "text": "	",
        },
        "line": 22,
        "message": "Expected indentation of 1 tab but found 2 spaces.",
        "messageId": "wrongIndentation",
        "nodeType": "Identifier",
        "ruleId": "indent",
        "severity": 2,
      },
      Object {
        "column": 1,
        "endColumn": 3,
        "endLine": 24,
        "line": 24,
        "message": "Mixed spaces and tabs.",
        "messageId": "mixedSpacesAndTabs",
        "nodeType": "Program",
        "ruleId": "no-mixed-spaces-and-tabs",
        "severity": 2,
      },
      Object {
        "column": 1,
        "endColumn": 1,
        "endLine": 27,
        "fix": Object {
          "range": Array [
            157,
            158,
          ],
          "text": "",
        },
        "line": 26,
        "message": "More than 1 blank line not allowed.",
        "messageId": "consecutiveBlank",
        "nodeType": "Program",
        "ruleId": "no-multiple-empty-lines",
        "severity": 2,
      },
      Object {
        "column": 1,
        "endColumn": 15,
        "endLine": 27,
        "fix": Object {
          "range": Array [
            159,
            173,
          ],
          "text": "	",
        },
        "line": 27,
        "message": "Expected indentation of 1 tab but found 14 spaces.",
        "messageId": "wrongIndentation",
        "nodeType": "Identifier",
        "ruleId": "indent",
        "severity": 2,
      },
      Object {
        "column": 27,
        "endColumn": 5,
        "endLine": 30,
        "fix": Object {
          "range": Array [
            186,
            189,
          ],
          "text": "
",
        },
        "line": 27,
        "message": "Block must not be padded by blank lines.",
        "messageId": "neverPadBlock",
        "nodeType": "BlockStatement",
        "ruleId": "padded-blocks",
        "severity": 1,
      },
      Object {
        "column": 1,
        "endColumn": 1,
        "endLine": 30,
        "fix": Object {
          "range": Array [
            187,
            188,
          ],
          "text": "",
        },
        "line": 29,
        "message": "More than 1 blank line not allowed.",
        "messageId": "consecutiveBlank",
        "nodeType": "Program",
        "ruleId": "no-multiple-empty-lines",
        "severity": 2,
      },
      Object {
        "column": 1,
        "endColumn": 5,
        "endLine": 30,
        "fix": Object {
          "range": Array [
            189,
            193,
          ],
          "text": "		",
        },
        "line": 30,
        "message": "Expected indentation of 2 tabs but found 4 spaces.",
        "messageId": "wrongIndentation",
        "nodeType": "Keyword",
        "ruleId": "indent",
        "severity": 2,
      },
      Object {
        "column": 1,
        "endColumn": 3,
        "endLine": 31,
        "line": 31,
        "message": "Mixed spaces and tabs.",
        "messageId": "mixedSpacesAndTabs",
        "nodeType": "Program",
        "ruleId": "no-mixed-spaces-and-tabs",
        "severity": 2,
      },
      Object {
        "column": 6,
        "endColumn": 7,
        "endLine": 31,
        "fix": Object {
          "range": Array [
            202,
            217,
          ],
          "text": "	    =


	    ",
        },
        "line": 31,
        "message": "Bad line breaking before and after '='.",
        "messageId": "badLinebreak",
        "nodeType": "AssignmentExpression",
        "ruleId": "operator-linebreak",
        "severity": 2,
      },
      Object {
        "column": 1,
        "endColumn": 1,
        "endLine": 34,
        "fix": Object {
          "range": Array [
            210,
            211,
          ],
          "text": "",
        },
        "line": 33,
        "message": "More than 1 blank line not allowed.",
        "messageId": "consecutiveBlank",
        "nodeType": "Program",
        "ruleId": "no-multiple-empty-lines",
        "severity": 2,
      },
      Object {
        "column": 1,
        "endColumn": 3,
        "endLine": 34,
        "line": 34,
        "message": "Mixed spaces and tabs.",
        "messageId": "mixedSpacesAndTabs",
        "nodeType": "Program",
        "ruleId": "no-mixed-spaces-and-tabs",
        "severity": 2,
      },
      Object {
        "column": 10,
        "endColumn": 11,
        "endLine": 34,
        "fix": Object {
          "range": Array [
            217,
            241,
          ],
          "text": "name


            this",
        },
        "line": 34,
        "message": "Extra semicolon.",
        "messageId": "extraSemi",
        "nodeType": "ExpressionStatement",
        "ruleId": "@typescript-eslint/semi",
        "severity": 2,
      },
      Object {
        "column": 1,
        "endColumn": 1,
        "endLine": 37,
        "fix": Object {
          "range": Array [
            223,
            224,
          ],
          "text": "",
        },
        "line": 36,
        "message": "More than 1 blank line not allowed.",
        "messageId": "consecutiveBlank",
        "nodeType": "Program",
        "ruleId": "no-multiple-empty-lines",
        "severity": 2,
      },
      Object {
        "column": 1,
        "endColumn": 13,
        "endLine": 37,
        "fix": Object {
          "range": Array [
            225,
            237,
          ],
          "text": "		",
        },
        "line": 37,
        "message": "Expected indentation of 2 tabs but found 12 spaces.",
        "messageId": "wrongIndentation",
        "nodeType": "Keyword",
        "ruleId": "indent",
        "severity": 2,
      },
      Object {
        "column": 25,
        "endColumn": 26,
        "endLine": 37,
        "fix": Object {
          "range": Array [
            247,
            255,
          ],
          "text": "id

  }",
        },
        "line": 37,
        "message": "Extra semicolon.",
        "messageId": "extraSemi",
        "nodeType": "ExpressionStatement",
        "ruleId": "@typescript-eslint/semi",
        "severity": 2,
      },
      Object {
        "column": 26,
        "endColumn": 3,
        "endLine": 39,
        "fix": Object {
          "range": Array [
            250,
            252,
          ],
          "text": "
",
        },
        "line": 37,
        "message": "Block must not be padded by blank lines.",
        "messageId": "neverPadBlock",
        "nodeType": "BlockStatement",
        "ruleId": "padded-blocks",
        "severity": 1,
      },
      Object {
        "column": 1,
        "endColumn": 3,
        "endLine": 39,
        "fix": Object {
          "range": Array [
            252,
            254,
          ],
          "text": "	",
        },
        "line": 39,
        "message": "Expected indentation of 1 tab but found 2 spaces.",
        "messageId": "wrongIndentation",
        "nodeType": "Punctuator",
        "ruleId": "indent",
        "severity": 2,
      },
      Object {
        "column": 7,
        "endColumn": 17,
        "endLine": 42,
        "line": 42,
        "message": "'user' is assigned a value but never used.",
        "messageId": "unusedVar",
        "nodeType": "Identifier",
        "ruleId": "@typescript-eslint/no-unused-vars",
        "severity": 1,
      },
      Object {
        "column": 19,
        "endColumn": 33,
        "endLine": 42,
        "fix": Object {
          "range": Array [
            277,
            291,
          ],
          "text": " ",
        },
        "line": 42,
        "message": "Multiple spaces found before 'new'.",
        "messageId": "multipleSpaces",
        "nodeType": "Keyword",
        "ruleId": "no-multi-spaces",
        "severity": 2,
      },
      Object {
        "column": 49,
        "endColumn": 57,
        "endLine": 42,
        "fix": Object {
          "range": Array [
            307,
            315,
          ],
          "text": "'Murphy'",
        },
        "line": 42,
        "message": "Strings must use singlequote.",
        "messageId": "wrongQuotes",
        "nodeType": "Literal",
        "ruleId": "@typescript-eslint/quotes",
        "severity": 2,
      },
      Object {
        "column": 61,
        "endColumn": 62,
        "endLine": 42,
        "fix": Object {
          "range": Array [
            318,
            320,
          ],
          "text": ")",
        },
        "line": 42,
        "message": "Extra semicolon.",
        "messageId": "extraSemi",
        "nodeType": "VariableDeclaration",
        "ruleId": "@typescript-eslint/semi",
        "severity": 2,
      },
    ],
    "source": "interface User
{
  name: string;


  id:
	  number;
}

class UserAccount

{



  name: string;



  id: number;

  constructor(name:

	              string,


              id: number) {


    this.name
	    =


	    name;


            this.id = id;

  }
}

const user: User =              new UserAccount(\\"Murphy\\", 1);
",
    "suppressedMessages": Array [],
    "usedDeprecatedRules": Array [],
    "warningCount": 4,
  },
]
`;
